AG-10360 fix tab search icon
Merge in EXTENSIONS/browser-extension from fix/AG-10360 to master

Squashed commit of the following:

commit 8ceb8495ee24838da11a45573708c25f3498e2c9
Merge: eaf4401d7 176879877
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Wed Oct 6 13:46:27 2021 +0300

    Merge branch 'master' into fix/AG-10360

commit eaf4401d79a57163efa7b2a43eee0fb4cce35cc9
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Tue Oct 5 17:18:45 2021 +0300

    do not affect on eventSearch by useOutsideClick

commit 11992b89134e3f645dd222c06b79577b21223b04
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Tue Oct 5 15:33:40 2021 +0300

    clear search value on escape if value.length !== 0

commit 6c89aad9ad89de378f7d4301225b0c0824819eeb
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Tue Oct 5 13:33:43 2021 +0300

    fix tab selecting by click while search

commit db25b0b6fc107c182461f8ddc512ac4ab38e98fb
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Mon Oct 4 19:42:52 2021 +0300

    blur activeElement while cancelTabSearch()

commit 2095b304342c32db61a1e1eab3d6da9cb9bb209c
Merge: 162b582c9 a20c149d9
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Mon Oct 4 19:36:37 2021 +0300

    Merge branch 'master' into fix/AG-10360

commit 162b582c9a19fbeb8959911593ac90adb77db865
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Mon Oct 4 17:54:00 2021 +0300

    cancel tab search on esc pressed

commit 9e0a6e81b6111225a49c16fa9e9a1ca388dce31e
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Mon Oct 4 17:49:00 2021 +0300

    start and stop tab search on arrow buttons click

commit e4cef7273e1db1b6517b118f252141c19e771fbf
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Fri Oct 1 18:07:46 2021 +0300

    transform tab search icon if onOpenSelect

commit fbb3b42de459a88c686937eb98aaab344f5419fb
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Fri Oct 1 15:24:44 2021 +0300

    fix filters search cross ison

--- a/Extension/src/pages/filtering-log/components/Search/search.pcss
+++ b/Extension/src/pages/filtering-log/components/Search/search.pcss
@@ -65,6 +65,17 @@
         left: 0;
         top: calc(50% - 12px);
     }
+
+    &__arrow-up {
+        transform: rotate(180deg);
+    }
+
+    &__btn {
+        cursor: pointer;
+        outline: none;
+        background-color: transparent;
+        border: 0;
+    }
 }
 
 .light-mode {
