--- a/Extension/src/pages/options/components/Filters/Search/search.pcss
+++ b/Extension/src/pages/options/components/Filters/Search/search.pcss
@@ -65,9 +65,9 @@
     }
 
     &__cross {
-        width: 12px;
-        min-width: 12px;
-        height: 12px;
+        width: 20px;
+        min-width: 20px;
+        height: 20px;
         position: relative;
         color: var(--gray400);
 
